added get lyricd with pagination
